--- a/.npmignore
+++ b/.npmignore
@@ -24,6 +24,12 @@ tmp/
 .buildpath
 .settings
 .yml
-_site
+.jshintignore
+.jshintrc
+.travis.yml
+.cache/
+_site/
+tests/
+docs/
+_theme/
 coverage
-tests/lego_modules
