--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "lego",
-  "version": "1.0.0",
+  "version": "1.1.3",
   "preferGlobal": "true",
-  "description": "Static Package Manager",
-  "author": "Hsiaoming Yang <me@lepture.com>",
-  "homepage": "http://lego.oa.com",
+  "description": "LEGO Web Component Package Manager",
+  "author": "webryan(http://github.com/webryan)",
+  "homepage": "http://github.com/imweb/lego",
   "repository": {
     "type": "git",
     "url": "https://github.com/imweb/lego/lego.git"
   },
+  "readmeFilename": "README.md",
   "keywords": [
-    "seajs",
+    "lego",
     "module",
     "cmd",
     "legojs",
@@ -26,7 +27,6 @@
   "dependencies": {
     "archy": "~1.0.0",
     "co": "3.1.0",
-    "lego-colorful": "~0.0.1",
     "commander": "~2.5.0",
     "lego-require": "~0.0.1",
     "empty-dir": "~0.1.0",
@@ -77,6 +77,5 @@
   "scripts": {
     "test": "make test"
   },
-  "readme": "lego",
-  "readmeFilename": "README.md"
+  "readme": "lego"
 }
