--- a/.npmignore
+++ b/.npmignore
@@ -1,35 +1,1 @@
-*.iml
-.idea/
-.ipr
-.iws
-*~
-~*
-*.diff
-*.patch
-*.bak
-.DS_Store
-Thumbs.db
-.project
-.*proj
-.svn/
-*.swp
-*.swo
-*.log
-*.sublime-project
-*.sublime-workspace
-node_modules/
-dist/
-tmp/
-.lego-build
-.buildpath
-.settings
-.yml
-.jshintignore
-.jshintrc
-.travis.yml
-.cache/
-_site/
-tests/
-docs/
-_theme/
-coverage
+*.iml.idea/.ipr.iws*~~**.diff*.patch*.bak.DS_StoreThumbs.db.project.*proj.svn/*.swp*.swo*.log*.sublime-project*.sublime-workspacenode_modules/dist/tmp/.lego-build.buildpath.settings.yml.jshintignore.jshintrc.travis.yml.cache/_site/tests/docs/_theme/coverage
