--- a/lib/template/package.json
+++ b/lib/template/package.json
@@ -14,6 +14,8 @@
   },
   "licenses": "MIT",
   "lego": {
+    "category" : "<%= category %>",
+    "categoryName" : "<%= categoryName %>",
     "main": "index.js",
     "dependencies": {
     },
