--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,26 @@
-*.iml.idea/.ipr.iws*~~**.diff*.patch*.bak.DS_StoreThumbs.db.project.*proj.svn/*.swp*.swo*.log*.sublime-project*.sublime-workspacenode_modules/dist/tmp/.lego-build.buildpath.settings.yml_sitecoveragetests/lego_modules
+*.iml
+.idea/
+.ipr
+.iws
+*~
+~*
+*.diff
+*.patch
+*.bak
+.DS_Store
+Thumbs.db
+.project
+.*proj
+.svn/
+*.swp
+*.swo
+*.log
+node_modules/
+.buildpath
+.settings
+.yml
+data
+nohup.out
+.spmjspid
+elasticsearch-*
+config/base.yaml
